# Canny_OpenGL

./: README.md  multidex-config.pro
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/myapplication/: MainActivity.kt  MyApplication.kt  MyGLRenderer.kt
app/src/main/java/com/example/myapplication/gl/: MyGLRenderer.kt
app/src/main/java/gl/: MyGLRenderer.kt
app/src/main/jni/: CMakeLists.txt  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/sdk/java/src/org/opencv/calib3d/: Calib3d.java  StereoSGBM.java
app/src/main/sdk/java/src/org/opencv/core/: Algorithm.java  Core.java  TickMeter.java
app/src/main/sdk/java/src/org/opencv/imgcodecs/: Imgcodecs.java
app/src/main/sdk/java/src/org/opencv/imgproc/: Imgproc.java  IntelligentScissorsMB.java
app/src/main/sdk/java/src/org/opencv/photo/: Photo.java
app/src/main/sdk/java/src/org/opencv/video/: Video.java
app/src/main/sdk/java/src/org/opencv/videoio/: VideoCapture.java
app/src/main/sdk/native/jni/include/opencv2/: calib3d.hpp  core.hpp  dnn.hpp  highgui.hpp  imgcodecs.hpp  imgproc.hpp  objdetect.hpp  photo.hpp  stitching.hpp  videoio.hpp
app/src/main/sdk/native/jni/include/opencv2/core/: mat.hpp  ocl.hpp  persistence.hpp  types.hpp  utility.hpp  va_intel.hpp
app/src/main/sdk/native/jni/include/opencv2/flann/: dist.h
app/src/main/sdk/native/jni/include/opencv2/gapi/: core.hpp  garg.hpp  gcommon.hpp  gcomputation.hpp  (+5 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
